@@ -1,6 +1,13 @@
 2017-12-30  Werner Lemberg  <wl@gnu.org>
 
-	[ttdebug]: Key 'I' toggles hexadecimal/decimal numbers display.
+	[ttdebug]: Key `K' shows full stack.
+
+	* src/ttdebug.c (RunIns): Update help display.
+	Handle key `K'.
+
+2017-12-30  Werner Lemberg  <wl@gnu.org>
+
+	[ttdebug]: Key `I' toggles hexadecimal/decimal numbers display.
 
 	* src/ttdebug.c (use_hex): New global variable.
 	(Cur_U_Line): Use it.
